--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     
     <h1>Welcome to Valorant Data Analysis</h1>
     <p>This website offers in-depth insights into Valorant gameplay and player statistics!</p>
+    <p> Yeah Science!</p>
     
     <!-- Other content goes here -->
 
